# NEL_ScapeRVB

./: .gitignore  .gitmodules  LICENSE.md  README.md  how_to install Boost Beast.md  how_to_update_choc.md  index.html  package-lock.json  package.json  toolchain.cmake  tsconfig.json  vite.config.js  vite.config.js.timestamp-1724415603389-bdec6785777dd.mjs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
.run/: NEL_scape_space_VST3.run.xml
NEL_scapeVRB_debug.xcworkspace/: contents.xcworkspacedata
NEL_scapeVRB_debug.xcworkspace/xcuserdata/sosgunverryberg.xcuserdatad/: UserInterfaceState.xcuserstate
NEL_scapeVRB_debug.xcworkspace/xcuserdata/sosgunverryberg.xcuserdatad/Bookmarks/: bookmarks.plist
cables-ui-dev/cables-exported-HTML/cables_scape_space_v0.9.615/: doc.md  index.html
cables-ui-dev/cables-exported-HTML/cables_scape_space_v0.9.615/assets/: tetragram_fixed_material.draco.glb
cables-ui-dev/cables-exported-HTML/cables_scape_space_v0.9.6213/: credits.txt  index.html
cables-ui-dev/cables-exported-HTML/cables_scape_space_v0.9.6213/js/: cables.js  cgl_pixelreader.js  ops.js  scape_space_v0.9.62.json
cables-ui-dev/cables-exported-PATCH/cables_scape_space_v0.9.62/: credits.txt  scape_space_v0.9.62.cables
dsp/: OEIS-Structures.ts  RefMap.js  RefMap.ts  convolverFactory.ts  handleGraphUpdate.ts  main.js  main.svelte.ts  main.ts  parseAndUpdateIRRefs.ts  parseState.ts  scape.js  scape.ts  srvb diagram.txt  srvb-er.ts  srvb.js  stores.svelte.js  tapNetwork.js
native/: Asset.cpp  Asset.h  AssetHelpers.cpp  AssetHelpers.h  Assets.h  AudioFileLoader.cpp  AudioFileLoader.h  CMakeLists.txt  ConvolverNode.h  PluginProcessor.cpp  PluginProcessor.h  Slot.cpp  Slot.h  SlotManager.cpp  SlotManager.h  SlotName.cpp  SlotName.h  UserBankManager.h  Utilities.cpp  Utilities.h  ViewClientInstance.cpp  ViewClientInstance.h  WebViewEditor.cpp  WebViewEditor.h
native/FFTConvolver/: AudioFFT.cpp  FFTConvolver.cpp  FFTConvolver.h  TwoStageFFTConvolver.cpp  TwoStageFFTConvolver.h  Utilities.cpp  Utilities.h
native/elementary/runtime/: CMakeLists.txt
native/elementary/runtime/elem/: Runtime.h  SingleWriterSingleReaderQueue.h  Types.h  Value.h
public/: dsp.main.js  manifest.json  patch.js  patch.js.map
public/MirrorScape-ui/: index.html
public/MirrorScape-ui-ws/: credits.txt  doc.md  index.html
public/MirrorScape-ui-ws/js/: MirrorScape-ui-ws.json  ops.js
public/MirrorScape-ui/js/: MirrorScape-ui.json  ops.js  subpatchop.js
public/assets/: ChivoMono-Medium-msdf.json  ChivoMono-Medium.ttf.font.json  NEL-Logo.draco.glb  doc.md  spherical_animation.draco.glb
public/cables/: credits.txt  doc.md  index.html
public/cables/js/: ROLLBACK_EXT_vars_NEL-SRVB_v0.1.34.json  cables.js  cgl_copytexture.js  cgl_pixelreader.js  ops.js  vargetset.js
public/cables_MirrorScape-ui12/: MirrorScape-ui12.cables
public/cables_MirrorScape-ui13-html/: index.html
public/cables_MirrorScape-ui13-html/js/: MirrorScape-ui.json  cgl_copytexture.js  ops.js
public/cables_NEL-SRVB_v0.2.623/: index.html
public/dev UI versions/: cables_scape_space_v0.8.8-beta.cables
public/dev UI versions/cables_cables_scape_space_v0.8.8-beta88/: credits.txt  index.html
public/dev UI versions/cables_scape_space_rc0.8.3/: doc.md  index.html
public/dev UI versions/cables_scape_space_rc101 2/: doc.md  index.html
public/dev UI versions/cables_scape_space_rc101 2/js/: ops.js  scape_space_rc1.json
public/dev UI versions/cables_scape_space_rc102/js/: cgl_copytexture.js  ops.js  scape_space_rc1.json
public/dev UI versions/cables_scape_space_rc2.05 2/: doc.md
public/dev UI versions/cables_scape_space_rc2.079/: doc.md
public/dev UI versions/cables_scape_space_rc2.13/js/: cgl_pixelreader.js  ops.js  scape_space_rc2.0.json
public/dev UI versions/cables_scape_space_ui_10+_recovered51/: index.html
public/dev UI versions/cables_scape_space_ui_10+_recovered51/js/: ops.js  scape_space_ui_10_recovered.json
public/dev UI versions/cables_scape_space_ui_10_recovered50/: credits.txt  doc.md  index.html
public/dev UI versions/cables_scape_space_ui_10_recovered50/js/: ops.js  vargetset.js
public/dev UI versions/cables_scape_space_ui_10_recovered52/: doc.md
public/dev UI versions/cables_scape_space_ui_10_recovered54/: doc.md  index.html
public/dev UI versions/cables_scape_space_ui_10_recovered54/js/: ops.js  scape_space_ui_10_recovered.json
public/dev UI versions/cables_scape_space_ui_110055/: credits.txt  doc.md  index.html  legal.txt
public/dev UI versions/cables_scape_space_v0.8.5-beta84/: index.html  legal.txt
public/dev UI versions/cables_scape_space_v0.9.0-beta89/: credits.txt  doc.md  index.html
public/dev UI versions/cables_scape_space_v0.9.0-beta89/js/: cgl_copytexture.js  ops.js  (+1 more)
public/dev UI versions/cables_scape_space_v0.9.2-beta93/: doc.md  index.html
public/js/: NEL-SRVB_v0.2.61.json  cables.js  ops.js
public/scape_space_ui/: credits.txt  index.html
public/scape_space_ui/js/: cables.js  cables_scape_space_v0.8.8-beta.json  ops.js  scape_space_rc2.0.json  scape_space_ui_1049.json  scape_space_ui_10_recovered.json  scape_space_ui_1100.json  scape_space_v0.8.4-beta.json  scape_space_v0.8.5-beta.json  scape_space_v0.8.8-beta.json  scape_space_v0.9.0-beta.json  scape_space_v0.9.2-beta.json  scape_space_v0.9.3-beta.json  scape_space_v0.9.4-beta.json  scape_space_v0.9.51-beta.json  scape_space_v0.9.61.json  standalone_electron.js
public/scape_space_ui_00/js/: ops.js  scape_space_ui_00.json
public/src/cables-js/: patch.js
scripts/: build-dsp.mjs  build-native-XCode.mjs  build-native.mjs  format_helper.py
src/: App.svelte  cables-ui.js  main.ts
src/cables-js/: loader.svelte.js  patch.js.map
src/lib/: NativeMessage.svelte.ts  PatchListeners.svelte.js  PatchListeners.svelte.ts  Plugin.svelte  SendToHost.svelte  SendToUI.svelte  Timer.ts  WebSocketClient.svelte
src/public/: manifest.json
src/stores/: NativeMessage.svelte.ts  NativeMessage.ts  WWTimer.ts  constants.ts  stores.svelte.ts  stores.ts
src/types/: global.d.ts  index.d.ts
src/utils/: utils.ts
(+91 files in other folders)
